@@ -1,7 +1,8 @@
 v0.9.7, --- --, ----
 Stability update for v0.9.6
 
-* Fixing French translation
+* Fixed French translation
+* Fixed bug in registration from compositing for layers alignment
 
 v0.9.6, Jun 20, 2017
 Stability update for v0.9.5
